# lightpad

./: .gitignore  PKGBUILD  PPA.md  README.md  THANKS  example-config  meson.build  post_install.py  rpm-build.spec
archlinux/: PKGBUILD
data/: application.css  com.github.libredeb.lightpad.1  com.github.libredeb.lightpad.appdata.xml  com.github.libredeb.lightpad.desktop  gamecontrollerdb.txt  io.github.libredeb.lightpad.1  io.github.libredeb.lightpad.desktop.in  io.github.libredeb.lightpad.metainfo.xml.in  lightpad_texec  xdg-autostart.desktop
debian/: changelog  control  copyright  rules
fedora/: lightpad.spec  packaging.md
po/: LINGUAS  POTFILES  de.po  es.po  fr.po  io.github.libredeb.lightpad.pot  meson.build  pt.po
src/: Application.vala  Color.vala  Config.vala  ConfigTypes.vala  DesktopEntries.vala  Resources.vala  Utilities.vala  config
src/Widgets/: AppItem.vala  CompositedWindow.vala  Indicators.vala  Searchbar.vala
vapi/: config.vapi
